force-app/main/default/objects/Lead/fields/Loan_Vol_12mo__c.field-meta.xml
<CustomField>
    <fullName>Loan_Vol_12mo__c</fullName>
    <label>Loan Vol (12mo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>