force-app/main/default/objects/Lead/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <label>LTV</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>