force-app/main/default/objects/Lead/fields/Meta_Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_ID__c</fullName>
    <label>Meta Ad ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>