force-app/main/default/objects/Lead/fields/Missing_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Missing_Follow_Up__c</fullName>
    <formula>AND
(
   OR(ISPICKVAL(Status, &apos;Contact Attempt 1&apos;), ISPICKVAL(Status, &apos;Contact Attempt 2&apos;), ISPICKVAL(Status, &apos;Contact Attempt 3&apos;)),
   Last_Call_Attempt_RingCentral__c &gt; Last_SMS_Attempt_RingCentral__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Missing Follow Up List</label>
    <type>Checkbox</type>
</CustomField>