force-app/main/default/objects/Lead/fields/Number_of_Activities_in_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Activities_in_Last_7_Days__c</fullName>
    <label>Number of Activities in Last 7 Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>