force-app/main/default/objects/Lead/fields/Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls__c</fullName>
    <description>This field counts the number of tasks where the type is Call</description>
    <label>Number of Calls</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>