force-app/main/default/objects/Lead/fields/Number_of_Notes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Notes__c</fullName>
    <description>This fields counts the number of tasks with the type Notes.</description>
    <label>Number of Notes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>