force-app/main/default/objects/Lead/fields/Number_of_Open_Nurture_Turndown_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Nurture_Turndown_Tasks__c</fullName>
    <label>Number of Open Nurture Turndown Tasks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>