force-app/main/default/objects/Lead/fields/Number_of_Open_Under_Contract_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Under_Contract_Tasks__c</fullName>
    <label>Number of Open Under Contract Tasks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>