force-app/main/default/objects/Lead/fields/Nurture__c.field-meta.xml
<CustomField>
    <fullName>Nurture__c</fullName>
    <formula>IF(ISBLANK(Nurture_Date__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nurture?</label>
    <type>Checkbox</type>
</CustomField>