force-app/main/default/objects/Lead/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead responded and wants more information</description>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>