force-app/main/default/objects/Lead/fields/Opt_Out_from_SMS_Automation__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_from_SMS_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RingCentral SMS Automation</description>
    <label>Opt-Out from SMS Automation</label>
    <type>Checkbox</type>
</CustomField>