force-app/main/default/objects/Lead/fields/Payment_Sum__c.field-meta.xml
<CustomField>
    <fullName>Payment_Sum__c</fullName>
    <formula>Estimated_Monthly_Payment__c + Property_Tax__c + Principal_and_Interest__c + Insurance__c + HOA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>