force-app/main/default/objects/Lead/fields/Portal_Hash_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Portal_Hash_Parameter__c</fullName>
    <label>Portal Hash Parameter</label>
    <type>TextArea</type>
</CustomField>