force-app/main/default/objects/Lead/fields/Pre_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Date__c</fullName>
    <label>Pre-Approval Date</label>
    <type>Date</type>
</CustomField>