force-app/main/default/objects/Lead/fields/Pre_Approval_Pass_At__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Pass_At__c</fullName>
    <description>Set when a user clicks Pass on the Pre-Approval Follow Ups tab. Treated the same as a logged call when calculating the follow-up cadence, so the lead drops out of the queue and returns after the applicable gap (6 days within 30 days of pre-approval, 14 days from 31-60 days). Deliberately separate from call history so a Pass is never counted as an actual phone call in reporting.</description>
    <inlineHelpText>Last time this lead was passed on from the Pre-Approval Follow Ups queue.</inlineHelpText>
    <label>Pre-Approval Follow-Up Passed At</label>
    <type>DateTime</type>
</CustomField>