force-app/main/default/objects/Lead/fields/Pre_Approved__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approved__c</fullName>
    <formula>IF(ISBLANK(Pre_Approval_Date__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Approved?</label>
    <type>Checkbox</type>
</CustomField>