force-app/main/default/objects/Lead/fields/Previous_Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Previous_Loan_Officer__c</fullName>
    <formula>IF(ISBLANK(Follow_Up_Account__r.Most_Recent_Loan_Officer__c), null, Follow_Up_Account__r.Most_Recent_Loan_Officer__r.FirstName &amp; &apos; &apos; &amp; Follow_Up_Account__r.Most_Recent_Loan_Officer__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Loan Officer</label>
    <type>Text</type>
</CustomField>