force-app/main/default/objects/Lead/fields/Principal_and_Interest__c.field-meta.xml
<CustomField>
    <fullName>Principal_and_Interest__c</fullName>
    <label>Principal and Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>