force-app/main/default/objects/Lead/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Town House</fullName>
            </value>
            <value>
                <fullName>1 Unit</fullName>
            </value>
            <value>
                <fullName>2-4 Units</fullName>
            </value>
            <value>
                <fullName>4-10 Units</fullName>
            </value>
            <value>
                <fullName>10+ Units</fullName>
            </value>
            <value>
                <fullName>PUD</fullName>
            </value>
            <value>
                <fullName>Mobile Home</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>