force-app/main/default/objects/Lead/fields/Realtor_Buying_Agent__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Buying_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Realtor - Buying Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>