force-app/main/default/objects/Lead/fields/Realtor_Buying_Agent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Buying_Agent_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Realtor - Buying Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lead.RecordType.Id</field>
            <operation>startsWith</operation>
            <value>0125x000000KuZGAA0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads (Buying Agent)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>