force-app/main/default/objects/Lead/fields/Realtor_Group__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Group__c</fullName>
    <label>Realtor Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Nickley Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Wemert Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>