force-app/main/default/objects/Lead/fields/Realtor_Group_New__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Group_New__c</fullName>
    <formula>TEXT(Realtor_Buying_Agent__r.Realtor_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realtor Group</label>
    <type>Text</type>
</CustomField>