force-app/main/default/objects/Lead/fields/Realtor_Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Intake_Date__c</fullName>
    <label>Realtor Intake Date</label>
    <type>Date</type>
</CustomField>