force-app/main/default/objects/Lead/fields/Realtor_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Lead_Source__c</fullName>
    <label>Realtor Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>