force-app/main/default/objects/Lead/fields/ReferralFormSourceEmail__c.field-meta.xml
<CustomField>
    <fullName>ReferralFormSourceEmail__c</fullName>
    <label>Partners Email</label>
    <type>Email</type>
</CustomField>