force-app/main/default/objects/Lead/fields/Referred_By_Realtor_Group__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Realtor_Group__c</fullName>
    <formula>TEXT(Referred_By__r.Realtor_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred By Realtor Group</label>
    <type>Text</type>
</CustomField>