force-app/main/default/objects/Lead/fields/RETR_Link__c.field-meta.xml
<CustomField>
    <fullName>RETR_Link__c</fullName>
    <label>RETR Link</label>
    <type>Url</type>
</CustomField>