force-app/main/default/objects/Lead/fields/Reviewed_Documents__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Documents__c</fullName>
    <label>Reviewed Documents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>