force-app/main/default/objects/Lead/fields/Should_Send_Referral_Message__c.field-meta.xml
<CustomField>
    <fullName>Should_Send_Referral_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Should Send Referral Message ?</label>
    <type>Checkbox</type>
</CustomField>