force-app/main/default/objects/Lead/fields/Source_URL_Full__c.field-meta.xml
<CustomField>
    <fullName>Source_URL_Full__c</fullName>
    <label>Source URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>