force-app/main/default/objects/Lead/fields/Spanish_Speaker_Intake_Form__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Speaker_Intake_Form__c</fullName>
    <label>Spanish Speaker? (Intake Form)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>