force-app/main/default/objects/Lead/fields/Submission_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Submission_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be changed to True when a new Submission Form is completed for the lead.</description>
    <label>Submission Form Completed</label>
    <type>Checkbox</type>
</CustomField>