force-app/main/default/objects/Lead/fields/Transaction_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Coordinator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Transaction Coordinator)</relationshipLabel>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>