force-app/main/default/objects/Lead/fields/Transaction_Is_Post_Closed__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Is_Post_Closed__c</fullName>
    <formula>TEXT(Converted_Transaction_ID__r.Status__c) = &apos;Post-Closed&apos;</formula>
    <label>Transaction Is Post-Closed</label>
    <type>Checkbox</type>
</CustomField>