force-app/main/default/objects/Lead/fields/TRID_Date__c.field-meta.xml
<CustomField>
    <fullName>TRID_Date__c</fullName>
    <label>TRID Date</label>
    <type>DateTime</type>
</CustomField>