force-app/main/default/objects/Lead/fields/User_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>User_is_Owner__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User is Owner</label>
    <type>Checkbox</type>
</CustomField>