force-app/main/default/objects/Lead/fields/User_working_the_lead__c.field-meta.xml
<CustomField>
    <fullName>User_working_the_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field updates when the lead status changes to &quot;Documents Requested&quot;, &quot;Documents Received for Review&quot; and &quot;Under Contract&quot;</description>
    <label>User working the lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>