force-app/main/default/objects/Lead/fields/Value_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Property__c</fullName>
    <label>Value of Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>