force-app/main/default/objects/Lead/fields/Webinar_Date__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Date__c</fullName>
    <label>Webinar Date</label>
    <type>Date</type>
</CustomField>