force-app/main/default/objects/Lead/fields/Webinar_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Registration_Date__c</fullName>
    <label>Webinar Registration Date</label>
    <type>Date</type>
</CustomField>