force-app/main/default/objects/Lead/fields/Website_Status_Webhook_Sent__c.field-meta.xml
<CustomField>
    <fullName>Website_Status_Webhook_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks Website leads that have already fired the one-time Zapier status webhook after leaving the early contact statuses.</description>
    <label>Website Status Webhook Sent</label>
    <type>Checkbox</type>
</CustomField>