force-app/main/default/objects/Lead/fields/Wireless_1__c.field-meta.xml
<CustomField>
    <fullName>Wireless_1__c</fullName>
    <label>Wireless 1</label>
    <type>Phone</type>
</CustomField>