force-app/main/default/objects/Lead/fields/Wireless_2__c.field-meta.xml
<CustomField>
    <fullName>Wireless_2__c</fullName>
    <label>Wireless 2</label>
    <type>Phone</type>
</CustomField>