force-app/main/default/objects/Lead/fields/Wireless_3__c.field-meta.xml
<CustomField>
    <fullName>Wireless_3__c</fullName>
    <label>Wireless 3</label>
    <type>Phone</type>
</CustomField>