force-app/main/default/objects/Lead/fields/Working_Message__c.field-meta.xml
<CustomField>
    <fullName>Working_Message__c</fullName>
    <label>Working Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>