force-app/main/default/objects/Lead/fields/Zillow__c.field-meta.xml
<CustomField>
    <fullName>Zillow__c</fullName>
    <label>Zillow</label>
    <type>Url</type>
</CustomField>