force-app/main/default/objects/Lead/fields/Zoom_Preapproval__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Preapproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zoom Preapproval</label>
    <type>Checkbox</type>
</CustomField>