force-app/main/default/objects/Lead/recordTypes/Consumer_Lead_record_type.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Lead_record_type</fullName>
    <active>true</active>
    <businessProcess>Consumer Lead Process</businessProcess>
    <description>This record type is used for consumer leads.</description>
    <label>Consumer Lead Record Type</label>
</RecordType>