force-app/main/default/objects/Lead/recordTypes/Consumer_Under_Contract_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Under_Contract_Lead_Record_Type</fullName>
    <active>false</active>
    <businessProcess>Consumer Lead Process</businessProcess>
    <description>This record type is used for potential clients once they have reached Under Contract status, and for Refinance leads</description>
    <label>Consumer Refinance Lead Record Type</label>
</RecordType>