force-app/main/default/objects/Lead/recordTypes/Loan_Officer_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Loan_Officer_Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Realtor Lead process</businessProcess>
    <label>Loan Officer Lead Record Type</label>
</RecordType>