force-app/main/default/objects/Lead/recordTypes/Realtor_Lead_record_type.recordType-meta.xml
<RecordType>
    <fullName>Realtor_Lead_record_type</fullName>
    <active>true</active>
    <businessProcess>Realtor Lead process</businessProcess>
    <description>This record type is used for realtors</description>
    <label>Realtor Lead record type</label>
</RecordType>