force-app/main/default/objects/Lead/validationRules/Can_not_convert_without_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_convert_without_Channel</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(IsConverted),
IsConverted = True,
ISBLANK(TRID_Date__c),
RecordTypeId != &apos;0125x000000KuZGAA0&apos;
)</errorConditionFormula>
    <errorMessage>TRID Date has not populated from Arive. Please toggle the loan status to Qualification in Arive.</errorMessage>
</ValidationRule>