force-app/main/default/objects/Lead/validationRules/Docs_Received_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>Docs_Received_Message</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(  LeadSource , &apos;Realtor Referral&apos; ),
    ISPICKVAL( Status , &apos;Documents Received for Review&apos; ),
    ISCHANGED( Status ),
    INCLUDES( Loan_Purpose__c , &apos;Purchase&apos; ),
    ISBLANK( Documents_Received_Message__c  ),
    Buying_Agent_has_Changed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Documents_Received_Message__c</errorDisplayField>
    <errorMessage>Please fill in Documents Received Message</errorMessage>
</ValidationRule>