force-app/main/default/objects/Lead/validationRules/Docs_Requested_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>Docs_Requested_Message</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( LeadSource , &apos;Realtor Referral&apos; ),
    ISPICKVAL( Status , &apos;Documents Requested&apos; ),
    ISCHANGED( Status ),
    INCLUDES( Loan_Purpose__c , &apos;Purchase&apos; ),
    ISBLANK( Documents_Requested_Message__c ),
    Buying_Agent_has_Changed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Documents_Requested_Message__c</errorDisplayField>
    <errorMessage>Please fill in Documents Requested Message</errorMessage>
</ValidationRule>