force-app/main/default/objects/Lead/validationRules/Lead_Rating_and_Loan_Amount_Fields_requr.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Rating_and_Loan_Amount_Fields_requr</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &apos;Pre-Approval&apos;),
    ISBLANK(Loan_Amount__c)
)</errorConditionFormula>
    <errorMessage>The Loan Amount field must be filled in before applying for pre-approval</errorMessage>
</ValidationRule>