force-app/main/default/objects/Lead/validationRules/Loan_Officers_Cannot_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Officers_Cannot_Change_Owner</fullName>
    <active>true</active>
    <description>Prevents Loan Officer profiles from changing Lead ownership.</description>
    <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp;
CONTAINS($Profile.Name, &quot;Loan Officer&quot;) &amp;&amp;
NOT($Permission.Lead_Owner_Reassignment)</errorConditionFormula>
    <errorMessage>Loan Officers cannot change the owner of a Lead. Please contact an Admin if this Lead needs to be reassigned.</errorMessage>
</ValidationRule>